miscConfig/bank/backend_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
        monitoring: enabled  # Label for Prometheus on Pod
    spec:
      nodeSelector:
        kubernetes.io/hostname: worker02
      containers:
        - name: backend
          image: mtdunina/backend-app:latest
          ports:
            - containerPort: 5000
              name: http      # Ensure the app port has a name
          resources: {}
            #limits:
              #cpu: "2"
              #memory: "1Gi"
            #requests:
              #cpu: "1"
              #memory: "512Mi"

          # Health checks
          readinessProbe:
            httpGet:
              path: /healthz
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 20
---
# --- Main Application Service ---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  labels:
    app: backend
    monitoring: enabled  # <<< ADD THIS LABEL for ServiceMonitor selection
spec:
  selector:
    app: backend
  ports:
    - name: http          # <<< This name is used by ServiceMonitor
      protocol: TCP
      port: 5000
      targetPort: 5000 # Can also use targetPort: http if containerPort is named http
      nodePort: 30080
  type: NodePort
