miscConfig/bank/frontend_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-end
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front-end
  template:
    metadata:
      labels:
        app: front-end
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - worker1  # Forza l'esecuzione su Worker1
      containers:
        - name: front-end
          image: mtdunina/front-end:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: front-end
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 31566
  type: NodePort  # Per accesso esterno
